# algoarena-v1

./: AI_TRADING_SYSTEM_COMPLETE.md  COMPLETION_REPORT.md  DELIVERABLES.md  DEPLOYMENT.md  DOMAIN_SETUP_GUIDE.md  LIVE_TRADING_SETUP.md  MAINTENANCE_MODE.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  TEST_REPORT.md  auto_trader.py  auto_trader_fixed.py  docker-compose.yml  reset_database.sql  simple_trader.py  start.sh
docker/caddy/: Caddyfile
docker/postgres/: init.sql
examples/: signal-chatgpt.json  signal-grok.json  test-signal.sh
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  App.tsx.backup
frontend/src/components/: MaintenancePage.tsx
n8n/workflows/: workflow-a-signal-execution.json  workflow-b-sync-data.json  workflow-c-alerts.json  workflow-d-llm-polling.json
tests/: test_503_handling.py  test_idempotency.py  test_risk_controls.py
trading-core/: Dockerfile  pyproject.toml
trading-core/app/: aster_client.py  config.py  database.py  grid_engine.py  llm_clients.py  main.py  market_analysis.py  models.py  order_executor.py
