[tool.poetry]
name = "app"
version = "0.1.0"
description = "Grid Trading Battle System - Trading Core"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.1"}
psycopg = {extras = ["binary"], version = "^3.2.11"}
redis = "^6.4.0"
httpx = "^0.28.1"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
numpy = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
